fix: add changes-file parameter to release step in workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,6 +23,7 @@ jobs:
         with:
           executable-name: hello-rust
           target: ${{ matrix.platform.target }}
+          changes-file: ""
     strategy:
       matrix:
         platform:
