--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,3 +37,4 @@ jobs:
             target: aarch64-apple-darwin
           - runs-on: windows-latest
             target: x86_64-pc-windows-msvc
+      fail-fast: false
